Color border for each voice and hide unnecessary keyboard and play button

--- a/app/index.html
+++ b/app/index.html
@@ -131,6 +131,27 @@
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
     <!-- end  slider-->
 
+    <style>
+        .thumbnail{
+            border-width: thin;
+        }
+        #playBorder1{
+            border-color: #ee421f;
+        }
+
+        #playBorder2{
+            border-color: #71ee13;
+        }
+
+        #playBorder3{
+            border-color: #132cee;
+        }
+
+        #playBorder4{
+            border-color: #ee19e4;
+        }
+    </style>
+
 </head>
 
 
