--- a/app/mergeSortedArray.html
+++ b/app/mergeSortedArray.html
@@ -2,9 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Merge Sorted Array</title>
+
 </head>
 <body>
-$END$
+    <p id="demo"></p>
+
 </body>
+<script>
+
+    var arr1 = [0,6,12,18,24];
+
+    var arr2 = [0,6,18,36,60,84,120,156,192,240];
+
+    function mergeTwoSortedArr(arr1,arr2) {
+        var result = [];
+        var i = 0, j = 0;
+        //Traverse both array
+        while(i < arr1.length && j < arr2.length)
+        {
+            // Check if current element of first
+            // array is smaller than current element
+            // of second array. If yes, store first
+            // array element and increment first array
+            // index. Otherwise do same with second array
+            if(arr1[i] < arr2[j])
+            {
+                if(result.indexOf(arr1[i]) == -1){
+                    result.push(arr1[i]);
+                }
+                i++;
+            }
+            else
+            {
+                if(result.indexOf(arr2[j]) < 0) {
+                    result.push(arr2[j]);
+                }
+                j++;
+            }
+
+        }
+
+        // Store remaining elements of first array
+        while(i < arr1.length)
+        {
+            //if(result.indexOf(arr1[i]) < 0)
+            result.push(arr1[i++]);
+        }
+
+        // Store remaining elements of second array
+        while(j < arr2.length)
+        {
+            //if(result.indexOf(arr2[j]) < 0)
+            result.push(arr2[j++]);
+        }
+        return result;
+    }
+    document.getElementById("demo").innerHTML = mergeTwoSortedArr(arr1,arr2);
+</script>
 </html>
